# ParallelisingConwaysGameOfLife

./: .gitignore  CMakeLists.txt  LICENSE  README.md
code/: CMakeLists.txt
code/conway_app/: main.cpp
code/conway_lib/: conway.cpp  conway.h  game_grid.cpp  game_grid.h  strategies.cpp  strategies.h
testing/library_tests/: CMakeLists.txt  conway_game_class_test.cpp  conway_library_tests.cpp  game_class_tests.cpp  game_grid_class_tests.cpp
